<?xml version="1.0"?>
<package format="2">
  <name>ros_tutorials_topic</name>
  <version>0.1.0</version>
  <description>The ros_tutorial_topic package</description>
  <maintainer email="kate.brighteyes@gmail.com">nvidia</maintainer>
  <license>Apache 2.0</license>

  <url type="repository">https://github.com/katebrighteyes</url> 
  <url type="website">http://wiki.ros.org/ros_tutorial_topic</url> 
  <author email="iitp@hancom.com">Jane Doe</author> 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
